align items fixed
on mobile view align items is normal

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,8 @@ td {
     flex-direction: column-reverse;
     text-align: center;
     margin: 35px auto;
+    align-items: normal;
+    
   }
 
   .feature-description {
